NLP TP's/texts/robotics/robotics.stackexchange_0000060456.txt
Q:

RGBDSlam_V2 Error with make

Hey so I'm running hydro compiled from source on XUbuntu 13.10 ARM for Odroid. When I try to run make, or catkin_make, on my root directory, I get this error.
             In file included from /home/odroid/rgbdslam_catkin_ws/build/rgbdslam_v2-hydro/src/../../../src/rgbdslam_v2-hydro/src/renderable.h:4:0,

             from /home/odroid/rgbdslam_catkin_ws/build/rgbdslam_v2-hydro/src/../../../src/rgbdslam_v2-hydro/src/glviewer.h:25,

             from /home/odroid/rgbdslam_catkin_ws/build/rgbdslam_v2-hydro/src/moc_glviewer.cxx:10:

              /usr/include/GL/gl.h:162:17: error: conflicting declaration 'typedef double GLdouble'
              typedef double  GLdouble; /* double precision float */
                              ^

            In file included from /usr/include/qt4/QtOpenGL/QGLWidget:1:0,

             from /home/odroid/rgbdslam_catkin_ws/build/rgbdslam_v2-hydro/src/../../../src/rgbdslam_v2-hydro/src/glviewer.h:20,

             from /home/odroid/rgbdslam_catkin_ws/build/rgbdslam_v2-hydro/src/moc_glviewer.cxx:10:
             /usr/include/qt4/QtOpenGL/qgl.h:85:17: error: 'GLdouble' has a previous declaration as 'typedef GLfloat GLdouble'
             typedef GLfloat GLdouble;
                             ^

make[2]: *** [rgbdslam_v2-hydro/CMakeFiles/rgbdslam.dir/src/moc_glviewer.o] Error 1
make[1]: *** [rgbdslam_v2-hydro/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
I've looked on the internet and this seems to be a problem with Qt OpenGL ES2 , but I am a wee beginner and I have no idea how to fix that myself. I have qt4.8.4
kernel 3.8.13.16
gcc 4.8.1

Originally posted by 4dahalibut on ROS Answers with karma: 15 on 2014-06-30
Post score: 0

Original comments
Comment by 4dahalibut on 2014-06-30:
Actually renaming one of the variables in one of the files should do it. I guess this is a legitimate bug then?

A:

Edit /usr/include/qt4/QtOpenGL/qgl.h and change typedef GLfloat GLdouble; to typedef double GLdouble; in both GLES and GLES2 lib imports. It's cause in ARM architecture, QT considers GLdouble as a float, instead of a double. So the typedefs crash.
By the way, I recommend using a Odroid 13.04 image, since a source install of Hydro wil give you some problems. 13.04 comes with Debian packages that are stable.

Originally posted by TSC with karma: 210 on 2014-06-30
This answer was ACCEPTED on the original site
Post score: 2

Original comments
Comment by 4dahalibut on 2014-07-01:
Thanks, I think i will transfer over to 13.04.

